# rag-chatbot

./: .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.dev  .gitignore  justfile  pyproject.toml  ruff.toml
backend/scripts/: pre-commit-backend.sh
backend/src/: main.py
backend/src/core/: config.py  routes.py
backend/src/rag/: deps.py  interface.py  routes.py  schemas.py  services.py
backend/tests/core/: test_config.py  test_rate_limit.py
backend/tests/rag/: test_deps.py  test_routes.py  test_service.py
frontend/: .prettierignore  app.json  babel.config.js  env.d.ts  eslint.config.mjs  package.json  tailwind.config.js
frontend/app/: +not-found.tsx  _layout.tsx  index.tsx
frontend/components/: ChatArea.tsx  FileItem.tsx  FileManagement.tsx  Message.tsx  MobileTabNavigation.tsx
frontend/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  text.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx  typography.tsx
frontend/context/: ReactQueryContext.tsx
frontend/features/rag/hooks/: useRagApiHooks.ts
frontend/features/rag/services/: ragApi.ts
frontend/hooks/: use-mobile.ts
frontend/lib/: fetcher.ts  utils.ts
frontend/scripts/: pre-commit-frontend.sh
